# simple-world

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  bespoke_ai_manual_v0.json  bespoke_ai_manual_v0.md  bespoke_ai_manual_v1.json  bespoke_ai_manual_v1.md  imgui  imgui-node-editor  metal-cpp  metal-cpp-extensions  nativefiledialog-extended
app/: CMakeLists.txt  Info.plist  run-dev.sh
app/shaders/: addnoise.metal  adjustcolors.metal  afterglow.metal  afterglow2.metal  attributesfromimagechannels.metal  axis_step_force.metal  blend.metal  blendpoints.metal  blendwithmask.metal  blob.metal  bloom.metal  blur.metal  boundpoints.metal  boxgradient.metal  bubblezoom.metal  channelmixer.metal  checkerboard.metal  chromab.metal  chromakey.metal  chromaticdistortion.metal  clearsomepoints.metal  colorgrade.metal  combine3images.metal  combinematerialchannels.metal  computeshaderstage_transformmesh.metal  computeshaderstage_transformpoints.metal  convertcolors.metal  crop.metal  depthbufferasgrayscale.metal  detectedges.metal  directional_force.metal  displace.metal  displacepoints2d.metal  distortandshade.metal  dither.metal  doylespiralpoints.metal  draw_billboards.metal  draw_lines.metal  draw_lines_buildup.metal  draw_points.metal  (+103 more)
app/shaders/shared/: hash.metal.h  noise.metal.h  quat.metal.h
app/shaders/templates/: field_distance_force_template.metal  field_raymarch_template.metal  field_render_template.metal  field_volume_force_template.metal  move_points_to_sdf_template.metal  pointcolorwithfield_template.metal  random_jump_force_template.metal  raymarch_points_template.metal  sdf_reflection_line_points_template.metal  selectpointswithsdf_template.metal  vector_field_force_template.metal
app/src/: advancedfeedback_golden.cpp  afterglow2_golden.cpp  afterglow_golden.cpp  app_delegate.cpp  app_delegate.h  axisstep_force_parity_golden.cpp  bpm_transport_golden.cpp  buildrandomstring_golden.cpp  colorlist_fanout_golden.cpp  colorlist_golden.cpp  conegizmo_golden.cpp  connect_cooks_golden.cpp  directional_force_parity_golden.cpp  drawboxgizmo_golden.cpp  drawlinegrid_golden.cpp  drawpoints_parity_golden.cpp  drawspheregizmo_golden.cpp  field_ops_absolutesdf_golden.cpp  field_ops_bendfield_golden.cpp  field_ops_blendsdfwithsdf_golden.cpp  field_ops_boxframesdf_golden.cpp  field_ops_boxsdf_golden.cpp  field_ops_cappedtorussdf_golden.cpp  field_ops_capsulelinesdf_golden.cpp  field_ops_chainlinksdf_golden.cpp  field_ops_combinefieldcolor_golden.cpp  field_ops_combinesdf_golden.cpp  field_ops_customsdf_golden.cpp  field_ops_cylindersdf_golden.cpp  field_ops_fractalsdf_golden.cpp  field_ops_image2dsdf_golden.cpp  field_ops_invertsdf_golden.cpp  field_ops_noisedisplacesdf_golden.cpp  field_ops_octahedronsdf_golden.cpp  field_ops_planesdf_golden.cpp  field_ops_prismsdf_golden.cpp  field_ops_pushpullsdf_golden.cpp  field_ops_pyramidsdf_golden.cpp  field_ops_raster3dfield_golden.cpp  field_ops_reflectfield_golden.cpp  (+122 more)
app/src/app/: animation_commands.cpp  animation_commands.h  animation_commands_selftest.cpp  animation_commands_selftest_s6.cpp  annotation_commands.cpp  annotation_commands.h  annotation_selftest.cpp  asset_index.cpp  asset_index.h  asset_index_selftest.cpp  asset_library.cpp  asset_library.h  asset_library_selftest.cpp  asset_ref_roundtrip_selftest.cpp  asset_relink.cpp  asset_relink.h  asset_relink_selftest.cpp  audio_monitor.cpp  audio_monitor.h  audio_settings.cpp  audio_settings.h  auto_backup.cpp  auto_backup.h  auto_backup_restore.cpp  auto_backup_restore_selftest.cpp  auto_backup_selftest.cpp  bypass_compound_selftest.cpp  child_state_commands.cpp  child_state_selftest.cpp  command.cpp  command.h  cook_host_values.cpp  cook_host_values.h  copy_paste_selftest.cpp  def_removal_selftest.cpp  document.cpp  document.h  document_io.cpp  document_navigation.cpp  document_navigation.h  (+48 more)
app/src/platform/: audio_capture.h  audio_capture.mm  audio_devices.h  audio_devices.mm  audio_playback.h  audio_playback.mm  dialogs.h  dialogs.mm  image_decode.h  image_decode.mm  image_decode_selftest.mm  image_save.h  image_save.mm  live_binding.cpp  live_binding.h  menu_appkit_ext.cpp  menu_appkit_ext.h  metal_compile.h  metal_compile.mm  metal_compile_selftest.mm  midi_loopback.h  midi_loopback.mm  osc_loopback.cpp  osc_loopback.h  window_mode.h  window_mode.mm
app/src/runtime/: Particle.h  addnoise_params.h  adjustcolors_params.h  afterglow2_params.h  afterglow_params.h  anim_math.h  annotation.h  attack_detector.cpp  attack_detector.h  attributesfromimagechannels_params.h  audio_analyzer.cpp  audio_analyzer.h  audio_ingest.cpp  audio_ingest.h  audio_ingest_replay.cpp  audio_reaction.cpp  audio_reaction.h  beat_lock_selftest.cpp  beat_synchronizer.cpp  beat_synchronizer.h  beat_timing.cpp  beat_timing.h  blend_params.h  blendpoints_params.h  blendwithmask_params.h  blob_params.h  bloom_params.h  blur_params.h  boundpoints_params.h  boxgradient_params.h  bpm_detection.cpp  bpm_detection.h  bpm_provider.cpp  bpm_provider.h  bubblezoom_params.h  buffer_op_registry.cpp  buffer_op_registry.h  buffer_ops_computeshaderstage.cpp  buffer_ops_executebufferupdate.cpp  buffer_ops_floatstobuffer.cpp  (+808 more)
app/src/ui/: annotation_draw.cpp  annotation_draw.h  annotation_interact.cpp  annotation_internal.h  asset_browser.cpp  asset_browser.h  canvas_ids.cpp  canvas_ids.h  cjk_font.cpp  cjk_font.h  combine_dialog.cpp  combine_dialog.h  connect_verb_selftest.cpp  connection_ops.cpp  connection_ops.h  copy_paste_ui.cpp  copy_paste_ui.h  editor_ui.cpp  editor_ui.h  editor_ui_canvas_edit.cpp  editor_ui_canvas_edit.h  editor_ui_grid.cpp  editor_ui_grid.h  editor_ui_layout.cpp  editor_ui_layout.h  fence_preview.cpp  fence_preview.h  gradient_widget.cpp  gradient_widget.h  graph_dump.cpp  graph_dump.h  graph_dump_selftest.cpp  inspector.cpp  inspector_param_menu.cpp  inspector_param_menu.h  keymap.cpp  keymap.h  keymap_binding.cpp  keymap_binding.h  menu_bar.cpp  (+48 more)
app/src/verify/eye/: eye.h  eye.mm  eye_internal.h  (+1 more)
app/testdata/: annotation_smoke.swproj  cjk_title.swproj  compound_smoke.swproj
(+1389 files in other folders)
